# koroutine_lib

./: .gitignore  404.html  CMakeLists.txt  CNAME  CONTRIBUTING.md  Doxyfile.in  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
api_overview/: index.html
async_io/: index.html
benchmark/: CMakeLists.txt  http.cpp  http_server_bench.cpp  nginx_bench.conf  run_benchmark.py
cmakes/: CMakeLists.txt  dep.cmake
contributing/: index.html
contributing/01-architecture/: index.html
contributing/02-tools/: index.html
contributing/03-async-io-internals/: index.html
contributing/architecture/: index.html
demos/: CMakeLists.txt  add.cpp  await_loop.cpp  channel.cpp  file_op.cpp  muti_loop.cpp  socket_client.cpp  socket_server.cpp  std_stream.cpp  sync.cpp  task_chain.cpp  task_manager.cpp  test_simple_coro.cpp  test_unique_ptr_coro.cpp  test_when_any_var.cpp  tst.cpp
demos/http/: crawler.cpp  file_server.cpp  http_server.cpp  simple_client.cpp  simple_server.cpp  upload_server.cpp
design/: index.html
docs/: DOCUMENTATION.md  REFACTOR_PLAN.md  USAGE.md  async_io.md  design.md  notice.md  requirements.txt
docs/source/: api_overview.md  design.md  http.md  index.md
docs/source/contributing/: 01-architecture.md  02-tools.md  architecture.md  index.md  tools.md
docs/source/guides/: 01-getting-started.md  02-tasks-and-generators.md  03-executors-and-schedulers.md  04-structured-concurrency.md  05-channels.md  06-async-io.md  07-integration.md  08-best-practices.md  09-http.md  10-common-pitfalls.md  99-api-overview.md
docs/竞品调研/: index.md
guides/00-core-design/: index.html
guides/01-getting-started/: index.html
guides/02-tasks-and-generators/: index.html
guides/03-executors-and-schedulers/: index.html
guides/04-structured-concurrency/: index.html
guides/05-channels/: index.html
guides/06-async-io/: index.html
guides/07-integration/: index.html
guides/08-best-practices/: index.html
guides/09-http/: index.html
guides/10-common-pitfalls/: index.html
guides/99-api-overview/: index.html
include/koroutine/: cancellation.hpp  channel.hpp  coroutine_common.h  debug.h  executor_manager.h  generator.hpp  koroutine.h  result.hpp  runtime.hpp  scheduler_manager.h  task.hpp  task_manager.h  task_promise.hpp  user_tools.h  utils.h  when_all.hpp  when_any.hpp
include/koroutine/async_io/: async_io.hpp  endpoint.h  engin.h  file.h  httplib.h  io_object.h  mock.h  op.h  resolver.h  socket.h  socket_options.h  standard_stream.h
include/koroutine/async_io/platform/linux/: io_uring_engin.h
include/koroutine/async_io/platform/macos/: kqueue_engin.h
include/koroutine/async_io/platform/win/: iocp_engin.h
include/koroutine/awaiters/: awaiter.hpp  channel_awaiter.hpp  dispatch_awaiter.hpp  future_awaiter.hpp  io_awaiter.hpp  schedule_awaiter.hpp  sleep_awaiter.hpp  switch_executor.hpp  switch_executor_awaiter.hpp  task_awaiter.hpp
include/koroutine/details/: constraint.hpp  fire_and_forget.hpp
include/koroutine/executors/: async_executor.h  executor.h  looper_executor.h  new_thread_executor.h  noop_executor.h  thread_pool_executor.h
include/koroutine/schedulers/: SimpleScheduler.h  delayed_executable.h  schedule_request.hpp  scheduler.h  scheduler.hpp  timer_scheduler.hpp
include/koroutine/sync/: async_condition_variable.h  async_mutex.h
notice/: index.html
scripts/: .httplib_last_sync  check_httplib_updates.py  generate_single_header.py
search/: search_index.json
src/: CMakeLists.txt  demo.cpp  executor_manager.cpp  koroutine.cpp  scheduler_manager.cpp  task_manager.cpp  task_promise.cpp  user_tools.cpp
src/async_io/: endpoint.cpp  engin.cpp  resolver.cpp  socket.cpp
src/async_io/platform/linux/: io_uring_engin.cpp
src/async_io/platform/macos/: kqueue_engin.cpp
src/async_io/platform/win/: iocp_engin.cpp
tests/: CMakeLists.txt
tests/integration/: test_single_header.cpp
tests/unit/: test_async_io.cpp  test_basic.cpp  test_channel.cpp  test_executor.cpp  test_http.cpp  test_ipv6.cpp  test_lambda.cpp  test_new_features.cpp  test_runtime.cpp  test_simple_async_io.cpp  test_socket.cpp  test_switch_executor.cpp  test_sync.cpp  test_task_manager.cpp  test_udp.cpp  test_when_any_variadic.cpp
tools/task_checker/: check_tasks.py  pyproject.toml
