[project]
name = "task-checker"
version = "0.1.0"
description = "Check for un-awaited Tasks in C++ code"
dependencies = [
    "libclang>=18.1.1",
    "typer>=0.9.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "rich",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
